# GenericDataModule

./: CMakeLists.txt
GenericData/: CMakeLists.txt  IProperty.hpp  Property.hpp  PropertyContainer.hpp  PropertyUtils.hpp  main.cpp
GenericData/Properties/: ConstantProperty.hpp  ImmutableProperty.hpp  KeyProperty.hpp  MutableProperty.hpp  StateProperty.hpp
